Updated HTML and CSS for Hero Section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <a href="#donate" class="donate-btn">Donate</a>
     </header>
     <main class="main-content">
+    <section class="hero-section">
+            <img src="HERO SPLASH_Edit.png" alt="New Research Publication" class="hero-image">
+            <div class="hero-floating-box">Out Now!</div>
+    </section>
     <section class="carousel-section">
         <div class="carousel-container">
             <div class="carousel" id="carousel">
